--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <main>
       <form id="post-form" onsubmit="createPost();return false;">
+        Title: <input type="text" id="postTitle">
 
       </form>
     </main>
