--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <main>
       <form id="post-form" onsubmit="createPost();return false;">
         Title: <input type="text" id="postTitle">
+        Author: <input type="text" id="postAuthor"><br>
+        Post: <input type="text" id="postBody"><br>
+        <input type="submit">
 
       </form>
     </main>
